Modifiquei o index.html e phpest.html, add um novo arquivo phpest01.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                     <li><a>CSS</a></li>
                     <li><a>JAVASCRIPT</a></li>
                     <li><a>PYTHON</a></li>
-                    <li><a href="phpest.html">PHP</a></li>
+                    <li><a href="php/phpest.html">PHP</a></li>
                     <li><a>C</a></li>
                     <li><a>C++</a></li>
                     <li><a>C#</a></li>
