modificado a pagena 1 de php

--- a/templates/php/phpest01.html
+++ b/templates/php/phpest01.html
@@ -61,12 +61,38 @@
             <li>PHP pode criar, abrir, ler, escrever, excluir e fechar arquivos no servidor</li>
             <li>PHP pode coletar dados de formulário</li>
             <li>PHP pode enviar e receber cookies</li>
+            <li>PHP pode adicionar, excluir e modificar dados em seu banco de dados</li>
+            <li>O PHP pode ser usado para controlar o acesso do usuário</li>
+            <li>PHP pode criptografar dados</li>
+        </ul>
+        <p>Com PHP você não está limitado a produzir HTML. Você pode produzir imagens ou arquivos PDF. Você também pode produzir qualquer texto, como XHTML e XML.</p>
+    </section>
+    <br>
+    <section>
+        <h3>Por que PHP?</h3>
+        <ul>
+            <li>O PHP roda em várias plataformas (Windows, Linux, Unix, Mac OS X, etc.)</li>
+            <li>O PHP é compatível com quase todos os servidores usados ​hoje(Apache, IIS, etc.)</li>
+            <li>O PHP suporta uma ampla variedade de bancos de dados</li>
+            <li>PHP é gratuito. Baixe-o do recurso oficial do PHP: <a>www.php.net</a></li>
+            <li>PHP é fácil de aprender e roda eficientemente no lado do servidor</li>
+        </ul>
+
+    </section>
+    <br>
+    <section>
+        <h3>O que há de novo no PHP 7</h3>
+        <ul>
+            <li>O PHP 7 é muito mais rápido que a versão estável popular anterior (PHP 5.6)</li>
+            <li>O PHP 7 melhorou o tratamento de erros</li>
+            <li>O PHP 7 suporta declarações de tipo mais rigorosas para argumentos de função</li>
+            <li>O PHP 7 suporta novos operadores (como o operador de nave espacial: <b><=></b>)</li>
         </ul>
     </section>
     <br>
-    <a href="../index.html">Voltar</a>
+    <a href="phpest01.html">Voltar</a>
     <br>
-    <a href="phpest01.html">Proximo</a>
+    <a href="phpest02.html">Proximo</a>
     <br>
     <footer>
 
